Server membership (#3)
* added discord refresh token storage

* added optional Discord server membership lock
